# data-module-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG  CITATION.cff  LICENSE  README.md  copier.yaml  environment.yaml  mkdocs.yaml  pixi.toml  pyproject.toml
.github/workflows/: pr-ci.yml  release.yml  template-check-version.yml  template-check.yml  template-pr-ci.yml  template-release.yml
docs/: index.md
docs/about/: motivation.md  our_framework.md
docs/development_guide/: general_requirements.md  getting_started.md  interfacing.md  requirements.md
template/: .gitignore.jinja  .pre-commit-config.yaml  CITATION.cff.jinja  INTERFACE.yaml  README.md.jinja  pixi.toml.jinja  {% if license == 'Apache-2.0' %}LICENSE{% endif %}.jinja  {% if license == 'MIT' %}LICENSE{% endif %}.jinja  {% if pre_commit == 'Yes' %}.pre-commit-config.yaml{% endif %}.jinja
template/.github/workflows/: check-version.yml  pr-ci.yml
template/docs/: index.md.jinja
template/tests/integration/: {% if true %}Snakefile{% endif %}.jinja
template/workflow/: Snakefile
template/workflow/internal/: protected_settings.yaml
template/workflow/rules/: automatic.smk
template/{{ module_short_name }}/: AUTHORS.jinja  CITATION.cff.jinja  INTERFACE.yaml  README.md.jinja  environment.yaml.jinja  mkdocs.yaml.jinja  pixi.toml.jinja  ruff.toml.jinja
template/{{ module_short_name }}/.tests/: Snakefile.jinja  test_config.yaml.jinja
template/{{ module_short_name }}/config/: example.yaml
template/{{ module_short_name }}/docs/: index.md.jinja
template/{{ module_short_name }}/docs/hooks/: clio_standard.py.jinja
template/{{ module_short_name }}/tests/: clio_test.py.jinja
template/{{ module_short_name }}/tests/integration/: Snakefile.jinja  test_config.yaml.jinja  {% if true %}Snakefile{% endif %}.jinja
template/{{ module_short_name }}/workflow/: Snakefile
template/{{ module_short_name }}/workflow/envs/: shell.yaml
template/{{ module_short_name }}/workflow/rules/: automatic.smk  dummy.smk
template/{{ module_short_name }}/workflow/scripts/: dummy_script.py
template/{{ module_short_name }}/{% if readthedocs %}docs{% endif %}/hooks/: clio_standard.py.jinja
template/{{ module_short_name}}/: AUTHORS.jinja  CITATION.cff.jinja  INTERFACE.yaml  environment.yaml.jinja  mkdocs.yaml.jinja  {% if license == 'MIT' %}LICENSE{% endif %}.jinja
template/{{ module_short_name}}/config/: example.yaml
template/{{ module_short_name}}/docs/: index.md.jinja
template/{{ module_short_name}}/docs/hooks/: clio_standard.py
template/{{ module_short_name}}/workflow/: Snakefile
template/{{ module_short_name}}/workflow/internal/: config.schema.yaml  settings.yaml
template/{{ module_short_name}}/workflow/rules/: automatic.smk  dummy.smk
template/{{ module_short_name}}/workflow/scripts/: dummy_script.py
tests/: conftest.py  template_test.py
tests/utils/: simple_answers.yaml
{{ module_short_name}}/: CITATION.cff  CITATION.cff.jinja  README.md.jinja  environment.yaml.jinja  {% if license == 'MIT' %}LICENSE{% endif %}.jinja
{{ module_short_name}}/config/: example.yaml
{{ module_short_name}}/workflow/profiles/default/: config.yaml
