### ---
# Project setup
### ---
[project]
authors = [
  { name = "Contributors listed in AUTHORS" },
]
name = "data-module-template"
requires-python = ">= 3.12"
version = "0.1.0"
readme = "README.md"
license = { text = "MIT" }
dependencies = ["mkdocs-mermaid2-plugin>=1.2.1,<2", "mkdocs-git-committers-plugin-2>=2.5.0,<3", "clio-tools @ git+https://github.com/calliope-project/clio.git"]

[project.urls]
website = "https://clio.readthedocs.io/"
repository = "https://github.com/calliope-project/data-module-template"
documentation = "https://clio.readthedocs.io"
changelog = "https://github.com/calliope-project/data-module-template/CHANGELOG"


[tool.pixi.project]
channels = ["conda-forge", "bioconda"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
data_module_template = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
cffconvert = ">=2.0.0,<3"
copier = ">=9.5.0,<10"
graphviz = ">=12.2.1,<13"
mkdocs-material = ">=9.6.7,<10"
mypy = ">=1.15.0,<2"
pytest = ">=8.3.5,<9"
ruff = ">=0.9.9,<0.10"
snakefmt = ">=0.10.2,<0.11"
snakemake-minimal = ">=8.29.0,<9"
networkx = ">=3.4.2,<4"  # TODO: remove after clio-tools is released


### ---
# Project tooling
### ---
[tool.mypy]
disable_error_code = ["import-untyped"]

[tool.ruff]
builtins = ["snakemake"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["E", "F", "I", "Q", "W", "D", "PT", "UP"]
# line too long; Black will handle these
ignore = ["E501"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

# Ignore `E402` (import violations) and `F401` (unused imports) in all `__init__.py` files
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "D104"]
"*.ipynb" = ["E402"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"
